--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "react-native-ratings": "^8.1.0",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
-    "react-native-star-rating-widget": "^1.7.3",
-    "react-native-svg": "^14.1.0"
+    "react-redux": "^9.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
